--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,3 +1,5 @@
+<% include partials/header %>
+
 <h1>This is the campgrounds page!</h1>
 
 <% campgrounds.forEach(function(campground) { %>
@@ -8,3 +10,5 @@
         </h4>
     </div>
 <% }) %>
+
+<% include partials/footer %>
