--- a/views/show.ejs
+++ b/views/show.ejs
@@ -2,7 +2,7 @@
 
 
 <h1>
-    <%=campground.name %>
+    <%= campground.name %>
 </h1>
 
 <img src="<%=campground.image %>" alt="">
@@ -12,4 +12,9 @@
 </p>
 
 
+<% campground.comments.forEach(function(comment){ %>
+    <p>
+        <strong><%= comment.author %></strong> - <%= comment.text %>
+    </p>
+<% }) %>
 <% include partials/footer %>
