--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 
 <h1>
@@ -17,4 +17,4 @@
         <strong><%= comment.author %></strong> - <%= comment.text %>
     </p>
 <% }) %>
-<% include partials/footer %>
+<% include ../partials/footer %>
