--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,15 +1,13 @@
 <% include ../partials/header %>
 
 
-<h1>
-    <%= campground.name %>
-</h1>
+<h1><%= campground.name %></h1>
 
 <img src="<%=campground.image %>" alt="">
 
-<p>
-    <%= campground.description %>
-</p>
+<p><%= campground.description %></p>
+
+<p><a class="btn btn-success" href="/campgrounds/<%=campground._id %>/comments/new">Add New Comment</a></p>
 
 
 <% campground.comments.forEach(function(comment){ %>
