--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -17,6 +17,9 @@
                     <h4 class="pull-right">$9.00/night</h4>
                     <h4><a href=""><%= campground.name %></a></h4>
                     <p><%= campground.description %></p>
+                    <p>
+                        <em>Submited By</em> <%= campground.author.username %>
+                    </p>
                 </div>
             </div>
             <div class="well">
