--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -42,6 +42,7 @@
                             <p>
                                 <%= comment.text %>
                             </p>
+                            <% if(currentUser && comment.author.id.equals(currentUser._id)) { %>
                             <a class="btn btn-xs btn-warning" 
                                 href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">
                                 Edit
@@ -49,6 +50,7 @@
                             <form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%=comment._id %>?_method=DELETE" method="POST">
                                 <input type="submit" class="btn btn-xs btn-danger" value="Delete">
                             </form>
+                            <% } %>
                         </div>
                     </div>
                 <% }) %>
