--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,8 @@
 <% include ./partials/header %>
 
-<h1>Login!</h1>
+<h1></h1>
+
+<h1><%= message %></h1>
 
 <form action="/login" method="POST">
     <input type="text" name="username" placeholder="username">
